[package]
name = "main"
version = "0.1.0"
authors = ["RystaC <rysta.plus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
random = { path = "../random" }
wasm-bindgen = "0.2.73"
